--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "quasar dev",
     "build": "quasar build",
     "start": "node server.js",
-    "heroku-postbuild": "yarn && yarn build"
+    "heroku-postbuild": "npm i && npm run build"
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
